Revision history for Mojolicious-Plugin-OpenAPI-Modern

{{$NEXT}}

0.006     2023-11-24 01:27:44Z
          - new config option "after_response", for providing a subref for
            validating the response when it is returned.

0.005     2023-02-27 01:42:43Z
          - fix test incompatibilities with OpenAPI::Modern 0.040

0.004     2022-12-11 01:22:59Z
          - bump dependency on OpenAPI::Modern for new features and
            for compatibility in test results

0.003     2022-06-08 02:25:56Z
          - test fixes for error messages that changed

0.002     2022-03-25 23:47:55Z
          - new helper methods validate_request and validate_response

0.001     2022-02-16 06:14:12Z
          - First version, unleashed upon an unsuspecting world.